--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
 </head>
 
 <body>
-    <h1>Embedded Visual Test</h1>
-    <!-- <h1>Vizlib Race Competition</h1> -->
+
+    <div class="fixedHeaderOnScroll" id="fixedHeaderOnScrollSelection">
+        <iframe scrolling="no"
+            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=MzVya&opt=currsel&select=clearall'
+            style='border:none;width:100%;height:100%;'></iframe>
+    </div>
+
+    <h1 class="mainTitle">Race Analysis</h1>
+    <img id="companyLogosRow" src="asset/image/raceAnalyticsLogos_row.png" >
+
 
     <!-- ================================================================ -->
     <!-- SCROLLSPY TEST -->
@@ -57,6 +65,9 @@
     <div class="row">
         <div class="col s12 m9 l10">
 
+            <!-- FIXED HEADER WITH SELECTION BAR -->
+
+
             <!-- CONTENT -->
             <article id="selectCircuit" class="section scrollspy">
                 <h1 class="action">Please select a circuit and race.</h1>
@@ -84,16 +95,19 @@
                 </div>
             </article>
 
-            <!-- <div class="fixedHeaderOnScroll" id="fixedHeaderOnScrollTest">
-                <h1>fixedHeaderOnScroll</h1>
+            <!-- TODO: PARALAX NOT WORKING -->
+            <!-- <div class="parallax-container">
+                <div class="parallax">
+                    <img id="companyLogos" src="asset/image/raceAnalyticsLogos.png" >
+                </div>
             </div> -->
 
-            <div class="fixedHeaderOnScroll" id="fixedHeaderOnScrollSelection">
-                <iframe scrolling="no"
-                    src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=MzVya&opt=currsel&select=clearall'
-                    style='border:none;width:100%;height:100%;'></iframe>
-            </div>
-           
+            <!-- <div class="parallax-container">
+                <div class="parallax">
+                    <img src="asset/image/parallax1.jpg">
+                </div>
+            </div> -->
+
             <div class="seperator">
                 <!-- layout seperator -->
             </div>
