added qlik viz articles

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 
 
                 <!-- CONTENT -->
+               
+                <!-- ======================================================================================== -->
+                <!-- 1) Select circuit & race -->
+
                 <article id="selectCircuit" class="section scrollspy">
                     <h1 class="action">Please select a circuit and race.</h1>
                     <div class="flexContainer selectCircuit">
@@ -163,6 +167,34 @@
                     <img src="asset/image/parallax1.jpg">
                 </div>
             </div> -->
+
+                <!-- ======================================================================================== -->
+                <!-- 2) Session stats -->
+
+                <div class="seperator">
+                    <!-- layout seperator -->
+                </div>
+
+                <article id="positionAnalysis" class="section scrollspy">
+                    <h1 class="title">Position analysis</h1>
+
+                    <ul id="tabs-swipe-demo" class="tabs">
+                        <li class="tab col s3"><a class="active" href="#swipe-1-pos">Chart</a></li>
+                        <li class="tab col s3"><a href="#swipe-2-pos">Detail</a></li>
+                    </ul>
+                    <div id="swipe-1-pos" class="col s12">
+                        <iframe
+                            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=d5e39d07-e05b-4661-984c-db423100cbb3&select=clearall'
+                            style='border:none;width:100%;height:100%;'></iframe>
+                    </div>
+                    <div id="swipe-2-pos" class="col s12">
+
+                    </div>
+
+                </article>
+
+                <!-- ======================================================================================== -->
+                <!-- 3) Driver performance -->
 
                 <div class="seperator">
                     <!-- layout seperator -->
@@ -262,10 +294,97 @@
                 </article>
 
 
+
+
+                <!-- ======================================================================================== -->
+                <!-- 5) Pit stop analysis -->
+
                 <div class="seperator">
                     <!-- layout seperator -->
                 </div>
 
+                <article id="pitstop" class="section scrollspy">
+                    <h1 class="title">Pit stop analysis</h1>
+
+                    <ul id="tabs-swipe-demo" class="tabs">
+                        <li class="tab col s3"><a class="active" href="#swipe-1-pit">Driver changeover</a></li>
+                        <li class="tab col s3"><a href="#swipe-2-pit">Pit stop timing</a></li>
+                        <li class="tab col s3"><a href="#swipe-3-pit">Total stop time by car</a></li>
+                    </ul>
+                    <div id="swipe-1-pit" class="col s12">
+                        <iframe
+                            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=b73fdadc-fff0-4fac-a3a6-61ac37086148&select=clearall'
+                            style='border:none;width:100%;height:100%;'></iframe>
+                    </div>
+                    <div id="swipe-2-pit" class="col s12">
+                        <iframe
+                            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=3e4815f2-4135-4a1e-b6a8-d43217ff9fcb&select=clearall'
+                            style='border:none;width:100%;height:100%;'></iframe>
+                    </div>
+                    <div id="swipe-3-pit" class="col s12">
+                        <iframe
+                            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=8aace642-ef01-43c5-aa76-f8fce5f5c80a&select=clearall'
+                            style='border:none;width:100%;height:100%;'></iframe>
+                    </div>
+                </article>
+
+
+                <!-- ======================================================================================== -->
+                <!-- 6) Safety car session -->
+
+                <div class="seperator">
+                    <!-- layout seperator -->
+                </div>
+
+                <article id="safetycar" class="section scrollspy">
+                    <h1 class="title">Safety car session</h1>
+
+                    <ul id="tabs-swipe-demo" class="tabs">
+                        <li class="tab col s3"><a class="active" href="#swipe-1-saf">Chart</a></li>
+                        <li class="tab col s3"><a href="#swipe-2-saf">Detail</a></li>
+                    </ul>
+                    <div id="swipe-1-saf" class="col s12">
+                        <iframe
+                            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=sqfvKmC&select=clearall'
+                            style='border:none;width:100%;height:100%;'></iframe>
+                    </div>
+                    <div id="swipe-2-saf" class="col s12">
+
+                    </div>
+
+                </article>
+
+
+                <!-- ======================================================================================== -->
+                <!-- 7) Position Analysis -->
+
+                <div class="seperator">
+                    <!-- layout seperator -->
+                </div>
+
+                <article id="positionAnalysis" class="section scrollspy">
+                    <h1 class="title">Position analysis</h1>
+
+                    <ul id="tabs-swipe-demo" class="tabs">
+                        <li class="tab col s3"><a class="active" href="#swipe-1-pos">Chart</a></li>
+                        <li class="tab col s3"><a href="#swipe-2-pos">Detail</a></li>
+                    </ul>
+                    <div id="swipe-1-pos" class="col s12">
+                        <iframe
+                            src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=d5e39d07-e05b-4661-984c-db423100cbb3&select=clearall'
+                            style='border:none;width:100%;height:100%;'></iframe>
+                    </div>
+                    <div id="swipe-2-pos" class="col s12">
+
+                    </div>
+
+                </article>
+
+                <!-- ======================================= -->
+                <!-- TODO REMOVE; PLACEHOLDER -->
+                <div class="seperator">
+                    <!-- layout seperator -->
+                </div>
                 <article id="nextLap" class="section scrollspy">
                     <h1 class="title">next chapter</h1>
                 </article>
@@ -285,8 +404,11 @@
                 <!-- <aside id="scrollspy" class="col hide-on-small-only m3 l2"> -->
                 <ul class="section table-of-contents">
                     <li><a href="#selectCircuit">Select circuit</a></li>
-                    <li><a href="#consistentDriver">Driver stats</a></li>
+                    <li><a href="#consistentDriver">Driver performance</a></li>
                     <li><a href="#fastestLap">Fastest lap</a></li>
+                    <li><a href="#pitstop">Pit stop</a></li>
+                    <li><a href="#safetycar">Safety car session</a></li>
+                    <li><a href="#positionAnalysis">Position analysis</a></li>
                 </ul>
             </aside>
 
@@ -302,7 +424,7 @@
     <!-- ===================================================================== -->
     <!-- FOOTER -->
     <div class="grid-item-footer">
-        
+
         <footer class="do-standard-footer">
 
             <!-- COLUMN 1: NAME, PHOTO, DESCRIPTION, SOCIAL MEDIA ICONS -->
