--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="c1websiteHeader-lower">
 
                     <h1>RACE ANALYSIS</h1>
-                    <p>You are here: Home / Race Analytics</p>
+                    <p>You are here: Home / Race Analysis</p>
                 </div>
             </header>
 
@@ -79,7 +79,7 @@
         <div class="gridItem-main">
 
             <div class="row"></div>
-            <h1 class="mainTitle section scrollspy" id="start">Race Analytics</h1>
+            <h1 class="mainTitle section scrollspy" id="start">Race Analysis</h1>
             <img id="companyLogosRow" src="asset/image/raceAnalyticsLogos_row.png">
 
 
