added social icons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/footer.css">
 
-    <!-- FOOTER ONLY MIGHT WANT TO REMOVE -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
@@ -35,6 +34,21 @@
             <!-- HEADER OF C1 RACING WEBSITE -->
             <header class="c1websiteHeader">
                 <div class="c1websiteHeader-top">
+                    <ul class="socialBar">
+                        <li>
+                            <a href="https://www.facebook.com/Citroen-c1-endurance-racing-2163163210574715/"><i class="fab fa-facebook-f socialIcon"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/C1RacingClub"><i class="fab fa-twitter socialIcon"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UCW-ebEnSs-c0f7qJRA_-12g"><i class="fab fa-youtube"></i></a>
+                            <!-- <img id="youtubeIcon" src="asset/image/youtube-logo_64px.png" alt="youtube"> -->
+                        </li>
+                        <li>
+                            <a class="lastSocialItem" href="https://c1racing.club/contact/"><i class="fas fa-envelope socialIcon"></i></a>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="c1websiteHeader-middle">
@@ -56,9 +70,17 @@
                         </ul>
                     </nav>
 
+                    <!-- TODO: implement icons -->
+                    <i class="material-icons searchIcon">search</i>
+                    <i class="material-icons cartIcon">shopping_cart</i>
+
+
+
+
+
                     <!-- flex-item 3 -->
                     <div class="rightSideIcons">
-                        <p>PLACEHOLDER | PLACEHOLDER</p>
+                        <!-- <p>PLACEHOLDER | PLACEHOLDER</p> -->
                         <!-- TODO code cart-item -->
                         <!-- TODO code social media items -->
                     </div>
@@ -446,7 +468,7 @@
             <div class="col3">
                 <div class="contact love">
                     <p>Designed & Coded with &#10084; by Daniel Oberbillig, Melbourne 2019</p>
-
+                    <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
                     <!-- avoid email on html for spam -> use contact form instead -->
                 </div>
             </div>
