--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     race.
                 </p>
                 <p>
-                    Please note, that it may take a while to load all elements on this page for the first time.
+                    Please note, that it may take some time to load all elements on this page the first time you visit.
                 </p>
 
                 <br>
@@ -192,7 +192,7 @@
             <!-- 1) Select circuit & race -->
 
             <article id="selectCircuit" class="section scrollspy">
-                <h1 class="action">Please select a circuit and race.</h1>
+                <h1 class="action">Please select a circuit and session.</h1>
 
                 <div class="progress">
                     <div class="indeterminate"></div>
@@ -519,7 +519,7 @@
                     <li class="tab col s3"><a href="#swipe-2-pos">Select start & finish</a></li>
                 </ul>
                 <div id="swipe-1-pos" class="col s12">
-                        <p class="subtitle">horinzontal x-axis: lap number, Lines: car number</p>
+                        <p class="subtitle">horinzontal x-axis: lap number | lines: car number</p>
                     <iframe
                         src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=d5e39d07-e05b-4661-984c-db423100cbb3&select=clearall'
                         style='border:none;width:100%;height:80%;'></iframe>
