--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             <!-- COLUMN 1: NAME, PHOTO, DESCRIPTION, SOCIAL MEDIA ICONS -->
             <div class="col1">
                 <h1>MOVE FASTER - Vizlib Race Analytics Championship</h1>
-                <h2>Competition entry submission, 21st June 2019</h2>
+                <!-- <h2>Competition entry submission, 21st June 2019</h2> -->
             </div>
 
             <div class="col2">
