--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 
             <article id="selectCircuit" class="section scrollspy">
                 <h1 class="action">Please select one circuit and one session.</h1>
-
                 <div class="progress">
                     <div class="indeterminate"></div>
                 </div>
+               
                 <div class="flexContainer selectCircuit">
                     <!-- map -->
                     <div class="map">
@@ -545,17 +545,18 @@
                     <div class="indeterminate"></div>
                 </div>
 
-                <ul id="tabs-swipe-demo-7" class="tabs">
+                <!-- <ul id="tabs-swipe-demo-7" class="tabs"> -->
                     <!-- <li class="tab col s3"><a class="active" href="#swipe-1-pos">Chart</a></li> -->
-                    <li class="tab col s3"><a class="active" href="#swipe-1-pos">Select start & finish</a></li>
-                </ul>
+                    <!-- <li class="tab col s3"><a class="active" href="#swipe-1-pos">Select start & finish</a></li> -->
+                <!-- </ul> -->
                 <!-- <div id="swipe-1-pos" class="col s12">
                         <p class="subtitle">horinzontal x-axis: lap number | lines: car number</p>
                     <iframe
                         src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&obj=d5e39d07-e05b-4661-984c-db423100cbb3&select=clearall'
                         style='border:none;width:100%;height:80%;'></iframe>
                 </div> -->
-                <div id="swipe-1-pos" class="col s12">
+                <!-- <div id="swipe-1-pos" class="col s12"> -->
+                <div class="posAnalysis">
                     <p class="subtitle">horinzontal x-axis: lap number, Lines: car number</p>
                     <iframe
                         src='http://localhost:4848/single/?appid=C%3A%5CUsers%5CDaniel%5CDocuments%5CQlik%5CSense%5CApps%5CC1%20Racing%20Club%20-%20Vizlib.qvf&sheet=9a5aa1b4-aac7-4637-bd60-00dcabd01787&select=clearall'
