footer label change

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
                     <span>
                         <a id="myWebsite" href="www.danieloberbillig.com" target="_blank"
-                            >Design & Development by <span id="myName">Daniel Oberbillig</span></a>
+                            >Web Design & Development by <span id="myName">Daniel Oberbillig</span></a>
                     </span>
                     <!-- | &ThinSpace; -->
                     <!-- <span>
